--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   google_fonts: ^3.0.1
+  audioplayers: ^0.20.1
+  simple_animations: ^4.0.2
 
   #Firebase
   firebase_core: ^2.1.0
